--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,10 @@ body {
     color: cyan;
 }
 
+.bp_container {
+    overflow-x: hidden;
+}
+
 
 
 .bp_header {
@@ -16,6 +20,7 @@ body {
     position: absolute;
     top: 10px;
     left: 360px;
+    width: 360px;
 }
 
 .bp_progress {
@@ -40,7 +45,9 @@ body {
     background-image: url(../img/description_area.png);
     background-repeat: no-repeat;
     height: 97px;
+    width: 1080px;
     margin-top: 4px;
+    overflow-x: hidden;
 }
 
 .bp_target_panel {
@@ -70,6 +77,7 @@ body {
     margin: 0px;
     padding-top: 3px;
     padding-left: 62px;
+    width: 383px;
 }
 
 .bp_status_panel dt,dd {
@@ -90,6 +98,7 @@ body {
     margin-left: 18px;
     margin-top: 3px;
     overflow-y: hidden;
+    width: 1042px;
 }
 
 .bp_slider ul {
