--- a/src/css/style.css
+++ b/src/css/style.css
@@ -69,7 +69,19 @@ body {
 
 .bp_segment {
     float:left;
-    margin-left: 20px;
+    margin-left: 5px;
+}
+
+.bp_segment > DIV {
+    width: 280px;
+    overflow: hidden;
+    text-indent: -20px;
+    padding-top: 4px;
+}
+
+.bp_segment > DIV > IMG {
+    width: 328px;
+    height: 78px;
 }
 
 .bp_status_panel {
@@ -93,6 +105,24 @@ body {
     text-indent: -1400px;
 }
 
+.bp_status_panel > dd {
+    width: 114px;
+    height: 90px;
+}
+
+.bp_status_panel > dd > DIV {
+    height: 28px;
+    width: 112px;
+    overflow: hidden;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #9D5D39;
+}
+
+.bp_status_panel > dd > DIV > IMG{
+    height: 28px;
+}
+
 .bp_slider {
     height: 340px;
     margin-left: 18px;
@@ -101,11 +131,11 @@ body {
     width: 1042px;
 }
 
-.bp_slider ul {
+.bp_slider > ul {
     margin: 0px;
     padding: 0px;
 }
-.bp_slider ul li {
+.bp_slider > ul > li {
     margin: 0px 0px -3px 0px;
     padding: 0px;
     list-style-type: none;
@@ -116,6 +146,8 @@ body {
     border-width: 1px;
     border-color: #DFBA7A;
     margin-right: 8px;
+    width: 340px;
+    height: 81px;
 }
 
 .bp_card:last-child {
