--- a/src/css/style.css
+++ b/src/css/style.css
@@ -142,6 +142,7 @@ body {
 }
 
 .bp_card {
+    display: inline-block;
     border-style: solid;
     border-width: 1px;
     border-color: #DFBA7A;
@@ -152,6 +153,39 @@ body {
 
 .bp_card:last-child {
     margin-right: 0px;
+}
+
+.bp_card_cover {
+    display: none;
+    position: absolute;
+    width: 340px;
+    height: 81px;
+}
+
+.bp_selected .bp_card_cover {
+    background-color: green;
+    display: block;
+    opacity: 0.4;
+}
+
+.bp_districted .bp_card_cover {
+    background-color: red;
+    display: block;
+    opacity: 0.4;
+}
+
+.bp_cursor {
+    border-color: #BEFA94;
+    border-style: solid;
+    border-width: 1px;
+
+    position: absolute;
+    width: 340px;
+    height: 81px;
+    top: 184px;
+    left: 18px;
+    background-color: green;
+    opacity: 0.4;
 }
 
 .bp_footer {
