--- a/src/css/style.css
+++ b/src/css/style.css
@@ -239,6 +239,7 @@ body {
 
     margin-left: -29px;
     margin-top: -5px;
+    display: none;
 }
 
 .bp_cursor > IMG.bp_left {
@@ -259,7 +260,9 @@ body {
 .bp_footer {
     background-image: url(../img/footer.png);
     background-repeat: no-repeat;
-    height: 100px;
-    margin-left: 7px;
     background-color: #000000;
+    position: absolute;
+    height: 200px;
+    width: 1080px;
+    margin-left: 7px;
 }
