--- a/src/css/style.css
+++ b/src/css/style.css
@@ -299,4 +299,31 @@ body {
     height: 200px;
     width: 1080px;
     margin-left: 7px;
+    position: relative;
+}
+
+.bp_remain_code_count {
+    width: 22px;
+    height: 18px;
+    background-color: black;
+    left: 399px;
+    top: 9px;
+    color: red;
+    font-size: 13pt;
+    padding-left: 5px;
+    font-weight: bold;
+    position: absolute;
+}
+
+.bp_exit {
+    position: absolute;
+    left: 820px;
+    height: 30px;
+    width: 200px;
+}
+
+.bp_exit > a {
+    display: block;
+    height: 100%;
+    text-indent: -1000px;
 }
