descripter 철자 descriptor 로 변경

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,7 +42,7 @@ body {
 
 }
 
-.bp_descripter {
+.bp_descriptor {
     background-image: url(../img/description_area.png);
     background-repeat: no-repeat;
     height: 97px;
