헤더 progress 위치 상대위치로 변경

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,12 +15,13 @@ body {
     background-repeat: no-repeat;
     height: 80px;
     margin-left: 7px;
+    position: relative;
 }
 
 .bp_progresser {
     position: absolute;
     top: 10px;
-    left: 360px;
+    left: 350px;
     width: 360px;
 }
 
