--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,7 @@ body {
     overflow-x: hidden;
     padding: 0 10px;
     width: 1080px;
-    margin: 0 auto;
+    margin: 20px auto 0;
 }
 
 .bp_header {
