design enhancement 작업 중간 저장

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,9 @@ BUTTON.bp_button {
     color: #B49969;
     font-weight: bold;
 }
+BUTTON.bp_button:focus {
+    outline: none;
+}
 
 
 .bp_container {
