--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,6 +29,7 @@ BUTTON.bp_button:focus {
     background-repeat: no-repeat;
     height: 80px;
     margin-left: 7px;
+    margin-bottom: -20px;
     position: relative;
 }
 
@@ -374,4 +375,71 @@ BUTTON.bp_button:focus {
     display: block;
     height: 100%;
     text-indent: -1000px;
+}
+
+
+.bp_description_panel {
+
+}
+
+.bp_description_panel > DIV {
+    float: left;
+}
+
+.bp_target_panel_area {
+    background-image: url(../img/target_panel.png);
+    background-repeat: no-repeat;
+    width : 530px;
+    height: 93px;
+    padding-top: 30px;
+    padding-left: 8px;
+}
+
+.bp_target_panel_area > h2.bp_target_code {
+    background-image: url(../img/messages/target_code_segment.png);
+    background-repeat: no-repeat;
+    height: 86px;
+    width: 240px;
+    text-indent: -1400px;
+    margin: 0;
+}
+
+.bp_target_panel_area > h2.bp_firewall_removed {
+    display: none;
+}
+
+
+.bp_target_panel_area > h2.bp_access_denied {
+    display: none;
+}
+
+.bp_target_panel_area > H2 {
+    float: left;
+}
+
+.bp_target_panel_area > DIV {
+    float:left;
+}
+
+
+
+.bp_target_panel_area > .bp_segment {
+    width: 280px;
+    overflow: hidden;
+    text-indent: -20px;
+    padding-top: 4px;
+}
+
+.bp_target_panel_area > .bp_segment > IMG {
+    width: 328px;
+    height: 78px;
+}
+
+.bp_status_panel_area {
+    background-image: url(../img/status_panel.png);
+    background-repeat: no-repeat;
+    width : 538px;
+    height: 93px;
+    margin-left: 3px;
+    padding-top: 30px;
 }
