--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,7 +25,7 @@ BUTTON.bp_button:focus {
 }
 
 .bp_header {
-    background-image: url(../img/header.png);
+    background-image: url(../img/header_new.png);
     background-repeat: no-repeat;
     height: 80px;
     margin-left: 7px;
@@ -335,7 +335,7 @@ BUTTON.bp_button:focus {
 }
 
 .bp_footer {
-    background-image: url(../img/footer.png);
+    background-image: url(../img/footer_new.png);
     background-repeat: no-repeat;
     background-color: #000000;
     height: 200px;
