마크업에 디자인 산출물 적용

--- a/src/js/bui/layout/footerViewTemplate.html
+++ b/src/js/bui/layout/footerViewTemplate.html
@@ -1,2 +1,2 @@
-<div class="bp_remain_code_count"></div>
-<div class="bp_exit"><a href="#">exit</a></div>
+<div class="bp_remaining_attempts"><span class="bp_number bp_3">3</span><span class="bp_msg_attempts_remaining">attempt(s) remaining</span></div>
+<div class="bp_exit"><button class="bp_button">Exit</button></div>
