--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,18 +27,17 @@ BUTTON.bp_button:active {
 }
 
 .bp_container {
-    overflow-x: hidden;
     padding: 0 10px;
-    width: 1080px;
+    width: 1120px;
     margin: 20px auto 0;
 }
 
 .bp_header {
-    background-image: url(../img/header_new.png);
+    background-image: url(../img/header.png);
     background-repeat: no-repeat;
+    width: 1064px;
     height: 80px;
-    margin-left: 7px;
-    margin-bottom: -20px;
+    margin: 0 auto -20px;
     position: relative;
 }
 
@@ -67,101 +66,114 @@ BUTTON.bp_button:active {
 
 }
 
+
 .bp_descriptor {
-    background-image: url(../img/description_area.png);
-    background-repeat: no-repeat;
-    height: 97px;
-    width: 1080px;
-    margin-top: 4px;
-    overflow-x: hidden;
+    margin: 0 auto;
+    width: 1079px;
+    height: 123px;
+}
+
+.bp_descriptor > DIV {
+    float: left;
 }
 
 .bp_target_panel {
-    float: left;
-    width: 536px;
-    margin-right: 6px;
-    padding-top: 5px;
+    background-image: url(../img/target_panel.png);
+    background-repeat: no-repeat;
+    width : 530px;
+    height: 93px;
+    padding-top: 30px;
     padding-left: 8px;
 }
 
 .bp_target_panel > h2.bp_target_code {
     background-image: url(../img/messages/target_code_segment.png);
     background-repeat: no-repeat;
-    margin: 0;
     height: 86px;
-    width: 235px;
+    width: 240px;
     text-indent: -1400px;
+    margin: 0;
+}
+.bp_target_panel.bp_completed > h2.bp_target_code {
+    display: none;
+}
+.bp_target_panel.bp_access_denied > h2.bp_target_code {
+    display: none;
+}
+
+.bp_target_panel > h2.bp_firewall_removed {
+    display: none;
+    background-image: url(../img/messages/firewalls_removed.png);
+    background-repeat: no-repeat;
+    margin-left: 48px;
+    margin-top: 0;
+    height: 67px;
+    width: 426px;
+    text-indent: -1400px;
+}
+
+.bp_target_panel.bp_completed > h2.bp_firewall_removed {
+    display: block;
+}
+.bp_target_panel.bp_access_denied > h2.bp_firewall_removed {
+    display: none;
+}
+
+.bp_target_panel > h2.bp_access_denied {
+    display: none;
+    background-image: url(../img/messages/firewalls_intact_red.png);
+    background-repeat: no-repeat;
+    margin-left: 48px;
+    margin-top: 0;
+    height: 67px;
+    width: 426px;
+    text-indent: -1400px;
+}
+
+.bp_target_panel.bp_access_denied > h2.bp_access_denied {
+    display: block;
+}
+
+.bp_target_panel > H2 {
+    float: left;
+}
+
+.bp_target_panel > DIV {
     float:left;
 }
 
 .bp_target_panel > .bp_segment {
-    float:left;
-    margin-left: 5px;
-}
-
-.bp_target_panel > .bp_segment > DIV {
     width: 280px;
     overflow: hidden;
     text-indent: -20px;
     padding-top: 4px;
 }
+.bp_target_panel.bp_completed > .bp_segment {
+    display: none;
+}
+.bp_target_panel.bp_access_denied > .bp_segment {
+    display: none;
+}
 
-.bp_target_panel > .bp_segment > DIV > IMG {
+.bp_target_panel > .bp_segment > IMG {
     width: 328px;
     height: 78px;
 }
 
-.bp_target_panel > h2.bp_firewall_removed {
-    display: none;
-    background-image: url(../img/firewall_removed_title.png);
-    margin-left: 48px;
-    margin-top: 0;
-    height: 67px;
-    width: 426px;
-    text-indent: -1400px;
-    float:left
-}
-
-.bp_target_panel > h2.bp_access_denied {
-    display: none;
-}
-
-.bp_target_panel.bp_completed > h2.bp_target_code,.bp_target_panel.bp_access_denied > h2.bp_target_code{
-    display: none;
-}
-
-.bp_target_panel.bp_completed > .bp_segment,.bp_target_panel.bp_access_denied > .bp_segment {
-    display: none;
-}
-
-.bp_target_panel.bp_completed > h2.bp_firewall_removed {
-    display: block;
-
-}
-
-.bp_target_panel.bp_access_denied > h2.bp_access_denied {
-    display: block;
-    background-image: url(../img/access_denied_target.png);
-    margin-left: 48px;
-    margin-top: 0;
-    height: 67px;
-    width: 426px;
-    text-indent: -1400px;
-    float:left
-}
-
 .bp_status_panel {
-    float: left;
-    margin: 0;
-    padding-top: 3px;
-    padding-left: 62px;
-    width: 383px;
+    background-image: url(../img/status_panel.png);
+    background-repeat: no-repeat;
+    width : 538px;
+    height: 93px;
+    margin-left: 3px;
+    padding-top: 30px;
 }
 
 .bp_status_panel > .bp_start_area {
     position: relative;
     float: right;
-    margin-top: 26px;
+    margin-top: 20px;
+    margin-right: 60px;
     display: none;
 }
 
@@ -169,57 +181,57 @@ BUTTON.bp_button:active {
     display: block;
 }
 
-.bp_status_panel.bp_start_stage dl {
-    display: none;
-}
-
-/*
-.bp_status_panel {
-    float: left;
-    margin: 0;
-    padding-top: 3px;
-    padding-left: 62px;
-    width: 383px;
-}
-*/
-
-.bp_status_panel.bp_completed {
-    width: 407px;
-}
-.bp_status_panel dl {
-    margin: 0;
-    padding: 0;
-}
-
-.bp_status_panel dt,dd {
-    margin: 0;
+.bp_status_panel > H3 {
     float: right;
 }
 
-.bp_status_panel dt {
-    margin-left: 78px;
+.bp_status_panel > .bp_remaining_code {
     background-image: url(../img/messages/remaining_code.png);
     background-repeat: no-repeat;
-    width: 191px;
-    height: 90px;
     text-indent: -1400px;
+    width: 190px;
+    height: 48px;
+    margin-top: 0;
+    margin-right: 86px;
+}
+.bp_status_panel.bp_start_stage > .bp_remaining_code {
+    display: none;
+}
+.bp_status_panel.bp_completed > .bp_remaining_code {
+    display: none;
 }
 
-.bp_status_panel dd {
-    width: 114px;
-    height: 90px;
+.bp_status_panel > .bp_code_hack_completed {
+    background-image: url(../img/messages/code_hack_complete.png);
+    background-repeat: no-repeat;
+    text-indent: -1400px;
+    margin-top: 0;
+    margin-right: 86px;
+    width: 207px;
+    height: 54px;
+    display: none;
 }
 
-.bp_status_panel dd > DIV {
+.bp_status_panel.bp_start_stage > .bp_code_hack_completed {
+    display: none;
+}
+.bp_status_panel.bp_completed > .bp_code_hack_completed {
+    display: block;
+}
+
+.bp_status_panel .bp_found_codes {
+    margin-left: 71px;
+}
+
+.bp_status_panel .bp_found_codes > DIV {
     height: 28px;
     width: 112px;
     overflow: hidden;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #9D5D39;
+    border: 1px solid #9D5D39;
+    position: relative;
 }
 
-.bp_status_panel  dd > DIV .bp_cover {
+.bp_status_panel .bp_found_codes > DIV .bp_cover {
     display: none;
     position: absolute;
     width: 110px;
@@ -231,33 +243,29 @@ BUTTON.bp_button:active {
     opacity: 0.6;
 }
 
-.bp_status_panel  dd > DIV IMG{
+.bp_status_panel .bp_found_codes > DIV IMG{
     height: 28px;
 }
-
-.bp_status_panel.bp_completed dt {
-    margin-left: 78px;
-    background-image: url(../img/code_hack_completed.png);
-    width: 215px;
-    height: 90px;
-    text-indent: -1400px;
+.bp_status_panel.bp_start_stage .bp_found_codes {
+    display: none;
 }
-.bp_status_panel.bp_completed  dd > DIV .bp_cover {
+
+.bp_status_panel.bp_completed .bp_found_codes > DIV .bp_cover {
     display: block;
 }
 
-.bp_status_panel  dd > DIV .bp_cover.bp_accepted {
+.bp_status_panel .bp_found_codes > DIV .bp_cover.bp_accepted {
     display: block;
 }
+
+
 
 
 .bp_slider {
     height: 340px;
-    margin-left: -10px;
     margin-top: 3px;
-    padding-left: 29px;
+    padding: 0 38px;
     overflow-y: hidden;
-    width: 1068px;
     position: relative;
 }
 
@@ -324,187 +332,62 @@ BUTTON.bp_button:active {
     width: 397px;
     height: 81px;
 
-    margin-left: -29px;
-    margin-top: -5px;
-}
-
-.bp_cursor > IMG.bp_left {
-    float: left;
-}
-
-.bp_cursor > IMG.bp_arrow {
-    float: left;
-    margin-left: 290px;
-    margin-top: 10px;
-    opacity: 0.7;
-}
-
-.bp_cursor > IMG.bp_right {
-    float: right;
+    margin-left: -40px;
+    margin-top: -6px;
 }
 
 .bp_footer {
-    background-image: url(../img/footer_new.png);
+    background-image: url(../img/footer.png);
     background-repeat: no-repeat;
     background-color: #000000;
     height: 200px;
-    width: 1080px;
-    margin-left: 7px;
+    width: 1065px;
+    margin: 0 auto;
     position: relative;
 }
 
 .bp_remaining_attempts {
-    width: 220px;
-    height: 18px;
-    background-color: black;
-    background-image: url(../img/messages/attempts_remaining.png);
-    background-repeat: no-repeat;
     left: 399px;
     top: 9px;
-    color: red;
     font-size: 13pt;
     padding-left: 5px;
     font-weight: bold;
     position: absolute;
 }
 
-.bp_remaining_attempts {
+.bp_remaining_attempts SPAN {
+    display: inline-block;
+    text-indent: -1400px;
+}
 
+.bp_remaining_attempts .bp_number {
+    width: 20px;
+}
+
+.bp_remaining_attempts .bp_number.bp_0 {
+    background: url(../img/messages/3.png) no-repeat;
+}
+.bp_remaining_attempts .bp_number.bp_1 {
+    background: url(../img/messages/3.png) no-repeat;
+}
+.bp_remaining_attempts .bp_number.bp_2 {
+    background: url(../img/messages/3.png) no-repeat;
+}
+.bp_remaining_attempts .bp_number.bp_3 {
+    background: url(../img/messages/3.png) no-repeat;
+}
+
+.bp_remaining_attempts .bp_msg_attempts_remaining {
+    margin-left: 3px;
+    background: url(../img/messages/attempts_remaining.png) no-repeat;
+    width: 220px;
+    height: 18px;
 }
 
 
 .bp_exit {
     position: absolute;
     left: 820px;
-    height: 30px;
-    width: 200px;
+    top: 3px;
 }
 
-.bp_exit > a {
-    display: block;
-    height: 100%;
-    text-indent: -1000px;
-}
-
-
-.bp_description_panel {
-
-}
-
-.bp_description_panel > DIV {
-    float: left;
-}
-
-.bp_target_panel_area {
-    background-image: url(../img/target_panel.png);
-    background-repeat: no-repeat;
-    width : 530px;
-    height: 93px;
-    padding-top: 30px;
-    padding-left: 8px;
-}
-
-.bp_target_panel_area > h2.bp_target_code {
-    background-image: url(../img/messages/target_code_segment.png);
-    background-repeat: no-repeat;
-    height: 86px;
-    width: 240px;
-    text-indent: -1400px;
-    margin: 0;
-}
-.bp_target_panel_area.bp_completed > h2.bp_target_code {
-    display: none;
-}
-.bp_target_panel_area.bp_access_denied > h2.bp_target_code {
-    display: none;
-}
-
-.bp_target_panel_area > h2.bp_firewall_removed {
-    display: none;
-    background-image: url(../img/messages/firewalls_removed.png);
-    background-repeat: no-repeat;
-    margin-left: 48px;
-    margin-top: 0;
-    height: 67px;
-    width: 426px;
-    text-indent: -1400px;
-}
-
-.bp_target_panel_area.bp_completed > h2.bp_firewall_removed {
-    display: block;
-}
-.bp_target_panel_area.bp_access_denied > h2.bp_firewall_removed {
-    display: none;
-}
-
-.bp_target_panel_area > h2.bp_access_denied {
-    display: none;
-    background-image: url(../img/messages/firewalls_intact_red.png);
-    background-repeat: no-repeat;
-    margin-left: 48px;
-    margin-top: 0;
-    height: 67px;
-    width: 426px;
-    text-indent: -1400px;
-}
-
-.bp_target_panel_area.bp_access_denied > h2.bp_access_denied {
-    display: block;
-}
-
-.bp_target_panel_area > H2 {
-    float: left;
-}
-
-.bp_target_panel_area > DIV {
-    float:left;
-}
-
-.bp_target_panel_area > .bp_segment {
-    width: 280px;
-    overflow: hidden;
-    text-indent: -20px;
-    padding-top: 4px;
-}
-.bp_target_panel_area.bp_completed > .bp_segment {
-    display: none;
-}
-.bp_target_panel_area.bp_access_denied > .bp_segment {
-    display: none;
-}
-
-.bp_target_panel_area > .bp_segment > IMG {
-    width: 328px;
-    height: 78px;
-}
-
-.bp_status_panel_area {
-    background-image: url(../img/status_panel.png);
-    background-repeat: no-repeat;
-    width : 538px;
-    height: 93px;
-    margin-left: 3px;
-    padding-top: 30px;
-}
-
-.bp_status_panel_area > .bp_start_area{
-    position: relative;
-    float: right;
-    margin-top: 20px;
-    margin-right: 60px;
-    display: none;
-}
-
-.bp_status_panel_area > H3 {
-    float: right;
-}
-
-.bp_status_panel_area > .bp_remaining_code {
-    background-image: url(../img/messages/remaining_code.png);
-    background-repeat: no-repeat;
-    text-indent: -1400px;
-    width: 190px;
-    height: 89px;
-    margin-top: 0;
-    margin-right: 86px;
-}
