start stage initialized

--- a/src/js/bui/template/cursorTemplate.html
+++ b/src/js/bui/template/cursorTemplate.html
@@ -1,3 +1,1 @@
-<img class="bp_left" src="img/cursor_left.png">
-<img class="bp_arrow" src="img/cursor_arrow.png">
-<img class="bp_right" src="img/cursor_right.png">
+<img src="img/cursor.png">
