코드 이미지 추가

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -300,6 +300,13 @@ BUTTON.bp_button:active {
     height: 81px;
 }
 
+.bp_card IMG {
+    width: 340px;
+    height: 81px;
+    border: none;
+}
+
+
 .bp_card_cover {
     display: none;
     position: absolute;
