--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,7 +12,7 @@ BUTTON.bp_button {
     color: #B49969;
     font-weight: bold;
     position: relative;
-    transition: all 0.3s linear;
+    transition: all 0.3s ease;
 }
 
 BUTTON.bp_button:focus {
@@ -41,8 +41,9 @@ BUTTON.bp_button.bp_glow_on {
 }
 
 .bp_header {
-    background-image: url(../img/header.png);
+    background-image: url(../img/merged/headerfooter.png);
     background-repeat: no-repeat;
+    background-position-y: -56px;
     width: 1064px;
     height: 80px;
     margin: 0 auto -20px;
@@ -105,7 +106,9 @@ BUTTON.bp_button.bp_glow_on {
 }
 
 .bp_target_panel {
-    background-image: url(../img/target_panel.png);
+    /*background-image: url(../img/target_panel.png);*/
+    background-image: url(../img/merged/tomerge.png);
+    background-position: -232px -121px;
     background-repeat: no-repeat;
     width : 530px;
     height: 93px;
@@ -114,7 +117,9 @@ BUTTON.bp_button.bp_glow_on {
 }
 
 .bp_target_panel > h2.bp_target_code {
-    background-image: url(../img/messages/target_code_segment.png);
+    /*background-image: url(../img/messages/target_code_segment.png);*/
+    background-image: url(../img/merged/tomerge.png);
+    background-position: 0 -244px;
     background-repeat: no-repeat;
     height: 86px;
     width: 240px;
@@ -131,7 +136,9 @@ BUTTON.bp_button.bp_glow_on {
 
 .bp_target_panel > h2.bp_firewall_removed {
     display: none;
-    background-image: url(../img/messages/firewalls_removed.png);
+    /*background-image: url(../img/messages/firewalls_removed.png);*/
+    background-image: url(../img/merged/tomerge.png);
+    background-position: -357px -296px;
     background-repeat: no-repeat;
     margin-left: 48px;
     margin-top: 11px;
@@ -149,11 +156,13 @@ BUTTON.bp_button.bp_glow_on {
 
 .bp_target_panel > h2.bp_access_denied {
     display: none;
-    background-image: url(../img/messages/firewalls_intact_red.png);
+    /*background-image: url(../img/messages/firewalls_intact_red.png);*/
+    background-image: url(../img/merged/tomerge.png);
+    background-position: -357px -244px;
     background-repeat: no-repeat;
-    margin-left: 48px;
+    margin-left: 41px;
     margin-top: 11px;
-    height: 67px;
+    height: 52px;
     width: 426px;
     text-indent: -1400px;
 }
@@ -189,8 +198,10 @@ BUTTON.bp_button.bp_glow_on {
 }
 
 .bp_status_panel {
-    background-image: url(../img/status_panel.png);
+    /*background-image: url(../img/status_panel.png);*/
     background-repeat: no-repeat;
+    background-image: url(../img/merged/tomerge.png);
+    background-position: -233px 1px;
     width : 538px;
     height: 93px;
     margin-left: 3px;
@@ -214,7 +225,9 @@ BUTTON.bp_button.bp_glow_on {
 }
 
 .bp_status_panel > .bp_remaining_code {
-    background-image: url(../img/messages/remaining_code.png);
+    /*background-image: url(../img/messages/remaining_code.png);*/
+    background-image: url(../img/merged/tomerge.png);
+    background-position: -24px -183px;
     background-repeat: no-repeat;
     text-indent: -1400px;
     width: 190px;
@@ -230,7 +243,9 @@ BUTTON.bp_button.bp_glow_on {
 }
 
 .bp_status_panel > .bp_code_hack_completed {
-    background-image: url(../img/messages/code_hack_complete.png);
+    /*background-image: url(../img/messages/code_hack_complete.png);*/
+    background-image: url(../img/merged/tomerge.png);
+    background-position: -24px -183px;
     background-repeat: no-repeat;
     text-indent: -1400px;
     margin-top: 0;
@@ -402,9 +417,9 @@ BUTTON.bp_button.bp_glow_on {
 }
 
 .bp_footer {
-    background-image: url(../img/footer.png);
+    background-image: url(../img/merged/headerfooter.png);
     background-repeat: no-repeat;
-    background-color: #000000;
+
     height: 56px;
     width: 1065px;
     margin: 0 auto;
