--- a/src/js/bui/template/cardTemplate.html
+++ b/src/js/bui/template/cardTemplate.html
@@ -1,5 +1,5 @@
 <div class="bp_card">
 <div class="bp_unauth_cover"></div>
 <div class="bp_card_cover"></div>
-<img src="<%=imgPath%>">
+<div class="bp_card_content" style="background-position-y: <%-position%>;"><%-codeNumber%></div>
 </div>
