--- a/output/bypass/hacking/css/style.css
+++ b/output/bypass/hacking/css/style.css
@@ -1,7 +1,4 @@
-body {
-    background: black;
-    color: cyan;
-}
+html { font-family: sans-serif; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; } body { margin: 0; } article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary { display: block; } audio, canvas, progress, video { display: inline-block; vertical-align: baseline; } audio:not([controls]) { display: none; height: 0; } [hidden], template { display: none; } a { background-color: transparent; } a:active, a:hover { outline: 0; } abbr[title] { border-bottom: 1px dotted; } b, strong { font-weight: bold; } dfn { font-style: italic; } h1 { font-size: 2em; margin: 0.67em 0; } mark { background: #ff0; color: #000; } small { font-size: 80%; } sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; } sup { top: -0.5em; } sub { bottom: -0.25em; } img { border: 0; } svg:not(:root) { overflow: hidden; } figure { margin: 1em 40px; } hr { -moz-box-sizing: content-box; box-sizing: content-box; height: 0; } pre { overflow: auto; } code, kbd, pre, samp { font-family: monospace, monospace; font-size: 1em; } button, input, optgroup, select, textarea { color: inherit; font: inherit; margin: 0; } button { overflow: visible; } button, select { text-transform: none; } button, html input[type="button"], input[type="reset"], input[type="submit"] { -webkit-appearance: button; cursor: pointer; } button[disabled], html input[disabled] { cursor: default; } button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; } input { line-height: normal; } * input[type="checkbox"], input[type="radio"] { box-sizing: border-box; padding: 0; } input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button { height: auto; } input[type="search"] { -webkit-appearance: textfield; -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; } input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; } fieldset { border: 1px solid #c0c0c0; margin: 0 2px; padding: 0.35em 0.625em 0.75em; } legend { border: 0; padding: 0; } textarea { overflow: auto; } optgroup { font-weight: bold; } table { border-collapse: collapse; border-spacing: 0; } td, th { padding: 0; }
 
 BUTTON.bp_button {
     background: transparent url(../img/buttons/button_normal.png);
@@ -89,12 +86,6 @@ BUTTON.bp_button.bp_glow_on {
 .bp_progress.bp_critical_state li {
     border-color: #DC3B3A;
     background-color: #892B26;
-}
-
-.bp_descriptor {
-    margin: 0 auto;
-    width: 1079px;
-    height: 123px;
 }
 
 .bp_descriptor > DIV {
@@ -287,15 +278,6 @@ BUTTON.bp_button.bp_glow_on {
     display: none;
 }
 
-.bp_slider {
-    height: 340px;
-    margin-top: 3px;
-    padding: 0 38px;
-    overflow-y: hidden;
-    overflow-x: hidden;
-    position: relative;
-}
-
 .bp_slider > ul {
     margin: 0;
     padding: 0;
@@ -388,14 +370,6 @@ BUTTON.bp_button.bp_glow_on {
     margin-top: -6px;
     z-index: 5;
     background: url(../img/merged/cursor.png) no-repeat;
-}
-
-.bp_footer {
-    background: url(../img/merged/headerfooter.png) no-repeat;
-    height: 56px;
-    width: 1065px;
-    margin: 0 auto;
-    position: relative;
 }
 
 .bp_remaining_attempts {
